<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Blood_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="4dp"
        card_view:elevation="10dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.rey.material.widget.TextView
                    android:id="@+id/txtPersonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txtPersonName"
                    android:textColor="@color/colorName"
                    android:textSize="13sp"
                    android:textStyle="normal">

                </com.rey.material.widget.TextView>

                <ImageView
                    android:id="@+id/imgBloodIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/blood_drop_icon" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txtPersonBloodGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="O+"
                    android:textColor="@color/colorName"
                    android:textSize="13sp"
                    android:textStyle="bold">

                </com.rey.material.widget.TextView>

                <ImageView
                    android:id="@+id/imgContactIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/blood_contact_icon" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txtPersonContactNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/contactno"
                    android:textColor="@color/colorName"
                    android:textSize="13sp"
                    android:textStyle="bold"></com.rey.material.widget.TextView>

                <com.rey.material.widget.TextView
                    android:id="@+id/txtPersonContactNo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/contactno2"
                    android:textColor="@color/colorName"
                    android:textSize="13sp"
                    android:textStyle="bold">

                </com.rey.material.widget.TextView>


            </LinearLayout>
        </HorizontalScrollView>


    </android.support.v7.widget.CardView>

</LinearLayout>